--- a/patches/Info.plist
+++ b/patches/Info.plist
@@ -178,7 +178,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>10.33.1</string>
+	<string>10.54.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -210,23 +210,23 @@
 	<key>CFBundleVersion</key>
 	<string>0</string>
 	<key>DTAppStoreToolsBuild</key>
-	<string>15E204</string>
+	<string>15F31e</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>21C52</string>
+	<string>21F77</string>
 	<key>DTPlatformName</key>
 	<string>iphoneos</string>
 	<key>DTPlatformVersion</key>
-	<string>17.2</string>
+	<string>17.5</string>
 	<key>DTSDKBuild</key>
 	<string>21C52</string>
 	<key>DTSDKName</key>
-	<string>iphoneos17.2</string>
+	<string>iphoneos17.5</string>
 	<key>DTXcode</key>
-	<string>1520</string>
+	<string>1540</string>
 	<key>DTXcodeBuild</key>
-	<string>15C500b</string>
+	<string>15F31d</string>
 	<key>FirebaseScreenReportingEnabled</key>
 	<false/>
 	<key>GADApplicationIdentifier</key>
@@ -295,23 +295,23 @@
 		</dict>
 	</dict>
 	<key>NSCalendarsUsageDescription</key>
-	<string>Add events to your calendar from X.</string>
+	<string>Add events to your calendar from Twitter.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Capture and post photos and videos from X.</string>
+	<string>Capture and post photos and videos from Twitter.</string>
 	<key>NSContactsUsageDescription</key>
-	<string>We will securely upload your contacts to our servers to help you connect with friends and suggest users to follow on X.</string>
+	<string>We will securely upload your contacts to our servers to help you connect with friends and suggest users to follow on Twitter.</string>
 	<key>NSLocationDefaultAccuracyReduced</key>
 	<true/>
 	<key>NSLocationUsageDescription</key>
-	<string>Enjoy the X experience tailored to your location.</string>
+	<string>Enjoy the Twitter experience tailored to your location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Enjoy the X experience tailored to your location.</string>
+	<string>Enjoy the Twitter experience tailored to your location.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Capture and post videos with sound from X.</string>
+	<string>Capture and post videos with sound from Twitter.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This lets you download photos and videos to your Photos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Easily add photos on X.</string>
+	<string>Easily add photos on Twitter.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Going forward, whenever you choose to share captions on this device, Apple will provide the service. Doing so helps make sure people of all hearing abilities can access your content.</string>
 	<key>NSUserActivityTypes</key>
@@ -320,7 +320,7 @@
 		<string>INSendMessageIntent</string>
 	</array>
 	<key>NSUserTrackingUsageDescription</key>
-	<string>This helps X show you more relevant ads.</string>
+	<string>This helps Twitter show you more relevant ads.</string>
 	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
 	<true/>
 	<key>SKAdNetworkItems</key>
@@ -533,7 +533,7 @@
 	<key>TWBuildNumber</key>
 	<string>0</string>
 	<key>TWBuildTime</key>
-	<string>2024-03-18T21:54:49Z</string>
+	<string>2024-08-15T01:26:31Z</string>
 	<key>TWBuildTrain</key>
 	<string>X</string>
 	<key>TWPushEnvironment</key>
